
Thu Apr 12 12:52:30 2001   <GordPeters@smarttech.com>

	* Fixed dc1394_get/set_video_mode/format/framerate to work with new
	  enumerations.
	* Fixed FEATURE_TO_VALUE/INQUIRY_OFFSET macros to work for both
	  FEATURE_HI and FEATURE_LO queries.
	* Exposed dc1394_feature_desc (feature description array).
	* Created dc1394_internal.h for definitions internal to the library
	* Moved some definitions from dc1394_control.h to dc1394_internal.h

Mon Apr 16 11:56:17 2001   <GordPeters@smarttech.com>

	* Fixed feature counting for loops in dc1394_control.c (Dan Dennedy)
	* Fixed get/set_trigger_mode functions in dc1394_control.c to work with
	  new enumerations (Damien Douxchamps)
	* Fixed color coding ID functions in dc1394_format7.c to conform to new
	  enumerations (Damien Douxchamps)

Tue Apr 24 15:12:19 2001   <GordPeters@smarttech.com>

	* Fixed problem with dc1394_auto_on_off() ignoring the value passed in
	  when setting auto mode on or off (fix by Li Ming
	  <ming@mpi-sb.mpg.de>)

Mon Apr 30 12:46:22 2001   <GordPeters@smarttech.com>

	* Fixed problem with dc1394_get_camera_feature() failing due to feature
	  id being modified by feature to offset macros (fix by Li Ming)

Thu Jun  7 12:29:26 2001   <GordPeters@smarttech.com>

	* Applied Dan Dennedy's patch which fixes image capture with newest
	  version of libraw1394 (0.9) and fixes a small spelling mistake

Tue Jul  3 16:33:50 2001   <GordPeters@smarttech.com>

	* Added functions to control the trigger feature:
	     -dc1394_set_trigger_on_off()
	     -dc1394_get_trigger_on_off()
	  (addition by Audun Jan Myrhol <audun.myrhol@q-free.com>)

Sat Sept 08 02:19:48 2001 <dan@dennedy.org>

    * Updated kernel-video1394.h against current CVS version
    
Mon Sept 24 22:36:12 2001 <dan@dennedy.org>
	* moved src -> libdc1394
	* included examples subdir in autoconf and automake
	* added examples/Makefile.am
	* examples build, but do not automatically install 